footer fixed width on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,22 @@ p:last-child {
 }
 
 .item {
-  width: 10%; /* or any other percentage value */
+  width: 15%; /* or any other percentage value */
+}
+
+.item a {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+}
+
+.mx-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+ }
+
+ .icon {
+
 }
 
 img {
